[workspace]
members = [
    "core/amt-ipld",
    "core/block-format",
    "core/datastore",
    "core/ds/rocksdb",
    "core/fs-lock",
    "core/hamt-ipld",
    "core/ipfs/blockstore",
    "core/ipld/cbor",
    "core/ipld/format",
    "paritylibs/kvdb",
    "paritylibs/kvdb-rocksdb",
    "paritylibs/kvdb-shared-tests",
]

[replace]
"cid:0.4.0" = { git = "https://github.com/PolkaX/rust-cid", branch = "ext" }
"serde_cbor:0.11.1" = {  git = "https://github.com/PolkaX/cbor", branch = "f64ser-hack" }
