[workspace]
members = [
    "block-format",
    "datastore",
    "datastore/rocksdb",
    "fs-lock",
    "ipfs/blockstore",
    "ipld/amt",
    "ipld/core",
    "ipld/format",
    "ipld/hamt",
    "paritylibs/kvdb",
    "paritylibs/kvdb-rocksdb",
    "paritylibs/kvdb-shared-tests",
]

[replace]
"cid:0.5.0" = { path = "../ipfs/rust-cid" }
