[workspace]
members = [
    "block-format",
    "datastore",
    "datastore/rocksdb",
    "fs-lock",
    "ipfs/blockstore",
#    "ipld/amt",
    "ipld/core",
    "ipld/format",
#    "ipld/hamt",
    "paritylibs/kvdb",
    "paritylibs/kvdb-rocksdb",
    "paritylibs/kvdb-shared-tests",
]

[replace]
"cid:0.5.0" = { git = "https://github.com/PolkaX/rust-cid", branch = "impl-cbor-and-json" }
