[package]
name = "datastore"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

[dependencies]
async-std = { version = "1.5", features = ["unstable"], optional = true}
async-trait = { version = "0.1", optional = true }
parking_lot = "0.10.0"
path-clean = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
matches = "0.1"
rand = "0.7.2"
serde_json = "1.0"

[features]
async = [
  "async-std",
  "async-trait"
]
