[package]
name = "rust-amt-ipld"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Implementation of the ipld amt"
keywords = ["ipfs", "ipld", "amt"]

[dependencies]
serde = "1.0"
serde_bytes = "0.11"
serde_cbor = { git = "https://github.com/PolkaX/cbor", branch = "f64ser-hack", features = ["tags"] }
thiserror = "1.0"

blockstore = { package = "rust-ipfs-blockstore", path = "../ipfs/blockstore" }
block-format = { package = "rust-block-format", path = "../block-format" }
cid = { package = "rust-cid", path = "../cid", features = ["hascid", "serde_support"] }
ipld-cbor = { package = "rust-ipld-cbor", path = "../ipld/cbor" }

[dev-dependencies]
matches = "0.1"
rand = "0.7"
util = { package = "rust-ipfs-util", path = "../util" }
