[package]
name = "rust-amt-ipld"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Implementation of the ipld amt"
keywords = ["ipfs", "ipld", "amt"]

[dependencies]
cid = { version = "0.4", features = ["ext"] }
multihash = "0.10"
serde = "1.0"
serde_bytes = "0.11"
serde_cbor = { version = "0.11", features = ["tags"] }
thiserror = "1.0"

block-format = { package = "rust-block-format", path = "../block-format" }
blockstore = { package = "rust-ipfs-blockstore", path = "../ipfs/blockstore" }
ipld-cbor = { package = "rust-ipld-cbor", path = "../ipld/cbor" }

[dev-dependencies]
matches = "0.1"
rand = "0.7"
