[package]
name = "rust-block-format"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Implementation of the block format"
keywords = ["ipfs", "block-format"]

[dependencies]
bytes = { version = "0.5", features = ["serde"] }
thiserror = "1.0"

cid = { package = "rust-cid", path = "../cid" }
util = { package = "rust-ipfs-util", path = "../util" }

[dev-dependencies]
multihash = { package = "parity-multihash", version = "0.2.2" }
