[package]
name = "rust-block-format"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Implementation of the block format"
keywords = ["ipfs", "block-format"]

[dependencies]
bytes = "0.5"
cid = "0.4"
multihash = "0.10"
thiserror = "1.0"
