[package]
name = "rust-cid"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Implementation of the cid"
keywords = ["ipfs", "cid"]

[dependencies]
thiserror = "1.0"
integer-encoding = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = { git = "https://github.com/PolkaX/cbor", branch = "impl-tag", features = ["tags"] }

multihash = { package = "parity-multihash", version = "0.2" }
multibase = { package = "rust-multibase", path = "../multibase" }

[features]
hascid = []
