[package]
name = "rust-cid"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Implementation of the cid"
keywords = ["ipfs", "cid"]

[dependencies]
integer-encoding = "1.0"
multibase = "0.8"
multihash = { package = "parity-multihash", version = "0.2.2" }
serde = { version = "1.0", optional = true }
serde_bytes = { version = "0.11", optional = true }
serde_cbor = { git = "https://github.com/PolkaX/cbor", branch = "f64ser-hack", features = ["tags"], optional = true }
thiserror = "1.0"

[features]
hascid = []
serde_support = [ "serde_cbor", "serde", "serde_bytes" ]
