[package]
name = "datastore"
version = "0.1.0"
authors = ["Aten <jincxmain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
path-clean = "0.1"
async-std = { version="1.5", features=["unstable"]}
async-trait = "0.1"
bytes = { version = "0.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
bytes = { version = "0.5", features = ["serde"] }
serde_json = "1.0"