[package]
name = "rust-datastore"
version = "0.1.0"
authors = ["Aten <jincxmain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
path-clean = "0.1"
async-std = { version="1.5", features=["unstable"], optional = true}
async-trait = { version = "0.1", optional = true }
bytes = { version = "0.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
serde_json = "1.0"

[features]
async = [
    "async-std",
    "async-trait"
]