[package]
name = "rust-hamt-ipld"
version = "0.1.0"
authors = ["Aten <jincxmain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fasthash = "0.4"
thiserror = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_bytes = "0.11"
serde_tuple = "0.2.5"
serde_cbor = { git = "https://github.com/PolkaX/cbor", branch = "impl-tag", features = ["tags"] }
bytes = { version = "0.5", features = ["serde"] }
archery = "0.3"
bigint = { version = "4.4" }

multihash = { package = "rust-multihash", path = "../multihash" }

block-format = { package = "rust-block-format", path = "../block-format" }
cid = { package = "rust-cid", path = "../cid", features = ["hascid", "serde_support"] }
ipld-cbor = { package = "rust-ipld-cbor", path = "../ipld/cbor", features = ["bigint"] }

[dev-dependencies]
util = { package = "rust-ipfs-util", path = "../util" }
serde_json = "1.0"
rand = "0.7"

[features]
test-hash = []
