[package]
name = "rust-hamt-ipld"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Implementation of the ipld hamt"
keywords = ["ipfs", "ipld", "hamt"]

[dependencies]
bigint = "4.4"
bytes = { version = "0.5", features = ["serde"] }
cid = { version = "0.4", features = ["ext"] }
multihash = "0.10"
murmur3 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = { version = "0.11", features = ["tags"] }
thiserror = "1.0"

block-format = { package = "rust-block-format", path = "../block-format" }
ipld-cbor = { package = "rust-ipld-cbor", path = "../ipld/cbor", features = ["bigint"] }

[dev-dependencies]
matches = "0.1"
rand = "0.7"
serde_json = "1.0"

[features]
test-hash = []
