[package]
name = "rust-hamt-ipld-old"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Implementation of the ipld hamt"
keywords = ["ipfs", "ipld", "hamt"]

[dependencies]
archery = "0.3"
bigint = "4.4"
bytes = { version = "0.5", features = ["serde"] }
multihash = { package = "parity-multihash", version = "0.2.2" }
murmur3 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = { git = "https://github.com/PolkaX/cbor", branch = "f64ser-hack", features = ["tags"] }
serde_tuple = "0.4"
thiserror = "1.0"

block-format = { package = "rust-block-format", path = "../block-format" }
cid = { package = "rust-cid", path = "../cid", features = ["hascid", "serde_support"] }
ipld-cbor = { package = "rust-ipld-cbor", path = "../ipld/cbor", features = ["bigint"] }

[dev-dependencies]
matches = "0.1"
rand = "0.7"
serde_json = "1.0"
util = { package = "rust-ipfs-util", path = "../util" }

[features]
test-hash = []
