[package]
name = "rust-multibase"
version = "0.1.0"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"

license = "MIT"
readme = "README.md"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Implementation of the multibase format"
keywords = ["multibase", "ipfs"]

[dependencies]
data-encoding = "2.1"
lazy_static = "1.4"
bs58 = "0.3"

[dev-dependencies]
criterion = "0.3"
rand = "0.7"

[[bench]]
name = "multibase"
harness = false
