[package]
name = "rust-multibase"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Implementation of the multibase format"
keywords = ["ipfs", "multiformat", "multibase"]

[dependencies]
base-x = "0.2"
data-encoding = "2.1"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.3"
rand = "0.7"

[[bench]]
name = "multibase"
path = "benches/multibase.rs"
harness = false
