[package]
name = "rust-multihash"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Implementation of the multihash format"
keywords = ["ipfs", "multiformat", "multihash"]

[dependencies]
parity-multihash = "0.2"
bytes = "0.4.12"
blake2 = { version = "0.8", default-features = false }
unsigned-varint = "0.2"
