[package]
name = "rust-ipfs-util"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Some utils of rust-ipfs"
keywords = ["ipfs", "util"]

[dependencies]
multihash = { package = "parity-multihash", version = "0.2" }
