[package]
name = "ipld-amt"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Implementation of the ipld amt"
keywords = ["ipfs", "ipld", "amt"]

[dependencies]
cid = { version = "0.5", features = ["impl-serde"] }
multihash = "0.11"
serde = "1.0"
serde_bytes = "0.11"
serde_cbor = { version = "0.11", features = ["tags"] }
thiserror = "1.0"

block-format = { path = "../../block-format" }
ipfs-blockstore = { path = "../../ipfs/blockstore" }
ipld-core = { path = "../core" }

[dev-dependencies]
matches = "0.1"
rand = "0.7"
