[package]
name = "ipld-core"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Implementation of the IPLD with CBOR and JSON serialization/deserialization"
keywords = ["ipfs", "ipld", "cbor", "json"]

[dependencies]
bytes = { version = "0.5", features = ["serde"] }
cid = { version = "0.5", features = ["impl-serde"] }
either = { version = "1.5", features = ["serde"] }
minicbor = { version = "0.4", features = ["std", "half"] }
multihash = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

block-format = { path = "../../block-format" }
ipld-format = { path = "../format" }

[dev-dependencies]
criterion = "0.3"
hex = "0.4"
maplit = "1.0"

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false
