[package]
name = "ipld-format"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Implementation of the ipld format"
keywords = ["ipfs", "ipld", "format"]

[dependencies]
cid = { version = "0.5", features = ["cbor", "json"] }
lazy_static = "1.4"
multihash = "0.11"
thiserror = "1.0"

block-format = { path = "../../block-format" }

[dev-dependencies]
bytes = "0.5"
