[package]
name = "kvdb"
version = "0.4.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "Generic key-value trait"
license = "GPL-3.0"
edition = "2018"

[dependencies]
smallvec = "1.0.0"
bytes = { version = "0.5", features = ["serde"] }
parity-util-mem = { version = "0.5"}

datastore = { package = "rust-datastore", path = "../../core/datastore" }
