[package]
name = "rocksdb"
version = "0.1.0"
authors = ["Aten <jincxmain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
kvdb = { path = "../../../paritylibs/kvdb" }
kvdb-rocksdb = { path = "../../../paritylibs/kvdb-rocksdb" }
bytes = { version = "0.5", features = ["serde"] }

datastore = { package = "rust-datastore", path = "../../datastore" }