[package]
name = "rust-ds-rocksdb"
version = "0.1.0"
authors = ["Aten <jincxmain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
kvdb = { path = "../../../paritylibs/kvdb" }
kvdb-rocksdb = { path = "../../../paritylibs/kvdb-rocksdb" }

datastore = { package = "rust-datastore", path = "../../datastore" }

[dev-dependencies]
tempdir = "0.3.7"
matches = "0.1"
rand = "0.7"
