[package]
name = "rust-ds-rocksdb"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

[dependencies]
thiserror = "1.0"

datastore = { package = "rust-datastore", path = "../../datastore" }
kvdb = { path = "../../../paritylibs/kvdb" }
kvdb-rocksdb = { path = "../../../paritylibs/kvdb-rocksdb" }

[dev-dependencies]
matches = "0.1"
rand = "0.7"
tempfile = "3.1"
