[package]
name = "rust-ipfs-blockstore"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Implementation of the ipfs blockstore"
keywords = ["ipfs", "blockstore"]

[dependencies]
cid = { version = "0.5", features = ["impl-serde"] }
thiserror = "1.0"

block-format = { package = "rust-block-format", path = "../../block-format" }
