[package]
name = "rust-ipld-cbor"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Implementation of the ipld cbor"
keywords = ["ipfs", "ipld", "cbor"]

[dependencies]
thiserror = "1.0"
either = { version = "1.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_bytes = "0.11"
bytes = { version = "0.5", features = ["serde"] }
num-bigint = { version = "0.2", optional = true }
multihash = { package = "rust-multihash", path = "../../multihash" }

serde_cbor = { git = "https://github.com/PolkaX/cbor", branch = "impl-tag", features = ["tags"] }
ipld-format = { package = "rust-ipld-format", path = "../format" }
block-format = { package = "rust-block-format", path = "../../block-format" }
cid = { package = "rust-cid", path = "../../cid", features = ["serde_support"] }

[dev-dependencies]
criterion = "0.3"
util = { package = "rust-ipfs-util", path = "../../util" }
hex-literal = "0.2.1"
maplit = "1.0"

[features]
bigint = [ "num-bigint" ]

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false
