[package]
name = "rust-ipld-cbor"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/PolkaX/rust-ipfs"
description = "Implementation of the ipld cbor"
keywords = ["ipfs", "ipld", "cbor"]

[dependencies]
bytes = { version = "0.5", features = ["serde"] }
cid = { version = "0.4", features = ["impl-serde"] }
either = { version = "1.5", features = ["serde"] }
multihash = "0.10"
num-bigint = { version = "0.2", optional = true }
num-traits = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = { version = "0.11", features = ["tags"] }
serde_json = "1.0"
thiserror = "1.0"

ipld-format = { package = "rust-ipld-format", path = "../format" }
block-format = { package = "rust-block-format", path = "../../block-format" }

[dev-dependencies]
criterion = "0.3"
hex-literal = "0.2.1"
maplit = "1.0"

[features]
bigint = ["num-bigint", "num-traits"]

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false
