[package]
name = "rust-ipld-format"
version = "0.1.0"
authors = ["Aten <jincxmain@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"

multihash = { package = "parity-multihash", git = "https://github.com/libp2p/rust-libp2p" }

block-format = { package = "rust-block-format", path = "../../block-format" }
cid = { package = "rust-cid", path = "../../cid" }